product_docs/docs/eprs/7.0/08_xdb_cli/03_xdb_cli_commands/29_removing_a_publication.mdx
---
title: "Removing a Publication (removepub)"
---

<div id="removing_a_publication" class="registered_link"></div>

The `removepub` command removes one or more publications.

Synopsis

```text
-removepub pubname_1 [ pubname_2 ] ...
  –repsvrfile pubsvrfile
  -repgrouptype { m | s }
  [ -force ]
```

See [Removing a Publication](../../07_common_operations/06_managing_publication/06_removing_pub/#removing_pub) for additional information on removing a publication. Parameters

`pubname_n`

> The name of a publication to be removed.

`pubsvrfile`

> The file containing the publication server login information.

`-repgrouptype`

> Specify `s` if this command applies to a single-master replication system. Specify `m` if this command applies to a multi-master replication system.

> `-force`

>  The `force` option removes the publication even when one or more subscriptions are defined against the publication.

Examples

1. A publication named `dept_emp` is removed from a single-master replication system.

```text
$ java -jar edb-repcli.jar -removepub dept_emp \
>   -repsvrfile ~/pubsvrfile.prop -repgrouptype s

Removing publication...
Publication dept_emp unpublished successfully.
```

2. A publication named `pub2` is removed by using the `-force` option

```text
$ java -jar edb-repcli.jar -removepub pub2 -repsvrfile pubsvr.prop -repgrouptype s -force

Removing publication via force option (force option will remove the publication even when one or more subscriptions are defined against the publication)...
Publication pub2 unpublished successfully.
```

